clang/test/BSC/Negative/InitAnalysis/init-struct-field-whole.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test BSCIR init analysis: using whole struct before all fields initialized.

struct Point { int x; int y; };

_Safe void test_whole_struct_uninit(void) {
    struct Point p;
    p.x = 1;
    struct Point q = p; // expected-error {{use of uninitialized value: `p`}}
}
